# sf2tal

./: .editorconfig  .gitignore  .hlint.yaml  LICENSE.md  README.md  flake.nix  fourmolu.yaml  sf2tal.cabal
app/: sf2tal.hs
src/: SF2TAL.hs
src/SF2TAL/: A.hs  C.hs  Common.hs  F.hs  H.hs  K.hs  Middle.hs  Tal.hs  Uniq.hs  Utils.hs
src/SF2TAL/F/: F.hs  Tc.hs
src/SF2TAL/Middle/: FromC.hs  FromF.hs  FromK.hs  Middle.hs  Opt.hs  Tc.hs
src/SF2TAL/Tal/: Exec.hs  FromA.hs  Tal.hs  Tc.hs
test/: sf2tal-test.hs
