cabal-version: 3.0
name: sf2tal
version: 0.1.0.0
build-type: Simple
license: 0BSD
license-files: LICENSE.md
copyright: Copyright (C) 2024 by EOWNERDEAD <eownerdead@disroot.org>
author: EOWNERDEAD
maintainer: eownerdead@disroot.org
homepage: https://codeberg.org/eownerdead/sf2tal

common common
  default-language: GHC2021
  default-extensions:
    DerivingStrategies,
    DerivingVia,
    DuplicateRecordFields,
    FunctionalDependencies,
    LambdaCase,
    MultiWayIf,
    NoFieldSelectors,
    OverloadedStrings,
    ParallelListComp,
    TemplateHaskell,
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
  build-depends:
    base ^>=4.18.2.1,
    mtl ^>=2.3.1,
    text ^>=2.0.2,
    unordered-containers ^>=0.2.20,
    microlens-platform ^>=0.4.3.5,
    prettyprinter ^>=1.7.1,


library sf2tal-lib
  import: common
  hs-source-dirs: src
  build-depends:
    template-haskell ^>=2.20.0.0,
  exposed-modules:
    SF2TAL,
    SF2TAL.Utils,
    SF2TAL.F,
    SF2TAL.Middle,
    SF2TAL.K,
    SF2TAL.C,
    SF2TAL.A,
    SF2TAL.Tal,
  other-modules:
    SF2TAL.F.F,
    SF2TAL.F.Tc,
    SF2TAL.Middle.Middle,
    SF2TAL.Middle.Tc,
    SF2TAL.Tal.Tal,
    SF2TAL.Tal.FromA,
    SF2TAL.Tal.Tc,
    SF2TAL.Tal.Exec,

test-suite sf2tal-test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: sf2tal-test.hs
  build-depends:
    sf2tal-lib,
    hspec ^>=2.11.8,
